<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/text1"
        android:text="@string/bal" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"/>
    <EditText
        android:layout_alignBaseline="@id/text1"
        android:layout_alignParentRight="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/text1"
        android:layout_toEndOf="@id/text1"
        android:id="@+id/edttext1"
        android:layout_marginTop="@dimen/margtop" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interest"
        android:id="@+id/text2"
        android:layout_below="@id/text1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/margtop" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/text2"
        android:layout_toRightOf="@id/text2"
        android:layout_toEndOf="@id/text2"
        android:id="@+id/edittext2"
        android:layout_marginTop="@dimen/margtop" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay"
        android:id="@+id/text3"
        android:layout_marginTop="@dimen/margtop"
        android:layout_below="@id/text2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/text3"
        android:layout_toEndOf="@id/text3"
        android:id="@+id/edttext3"
        android:layout_marginTop="@dimen/margtop"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text4"
        android:text="@string/f_bal"
        android:layout_marginTop="@dimen/margtop"
        android:layout_below="@+id/text3" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/text4"
        android:layout_toRightOf="@id/text4"
        android:layout_marginTop="@dimen/margtop"
        android:id="@+id/edittext3" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text5"
        android:text="@string/months"
        android:layout_below="@id/text4"
        android:layout_marginTop="@dimen/margtop"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText4"
        android:layout_marginTop="@dimen/margtop"
        android:layout_alignBaseline="@id/text5"
        android:layout_toRightOf="@id/text5"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text6"
        android:text="@string/p_int"
        android:layout_alignParentStart="true"
        android:layout_below="@id/text5"
        android:layout_marginTop="@dimen/margtop" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edittext6"
        android:layout_alignBaseline="@id/text6"
        android:layout_toRightOf="@id/text6"
        android:layout_marginTop="@dimen/margtop"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compute"
        android:id="@+id/button1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/clear"
        android:layout_alignBaseline="@id/button1"
        android:id="@+id/button2"
        />
</RelativeLayout>
